<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fisk.chipclouddemo.DemoActivity"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/drawable_cloud"
            android:textSize="16sp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox_drawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="space_around"
            app:alignItems="flex_start"
            app:dividerDrawable="@drawable/div"
            app:flexWrap="wrap"
            app:showDivider="middle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/drawable_cloud_close"
            android:textSize="16sp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox_drawable_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="space_around"
            app:alignItems="flex_start"
            app:dividerDrawable="@drawable/div"
            app:flexWrap="wrap"
            app:showDivider="middle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/standard_cloud"
            android:textSize="16sp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="space_around"
            app:alignItems="flex_start"
            app:dividerDrawable="@drawable/div"
            app:flexWrap="wrap"
            app:showDivider="middle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/delete_cloud"
            android:textSize="16sp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox_deleteable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="space_around"
            app:alignItems="flex_start"
            app:dividerDrawable="@drawable/div"
            app:flexWrap="wrap"
            app:showDivider="middle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/horizontalscrollview_example"
            android:textSize="16sp"/>

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/horizontal_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>